base,index small fix

--- a/price_tracker/web/templates/web/base.html
+++ b/price_tracker/web/templates/web/base.html
@@ -21,8 +21,6 @@
     <link rel="stylesheet" href="{% static 'web/css/styles.css' %}">
     <link rel="stylesheet" href="{% static 'web/fonts/ionicons.min.css' %}">
     <link rel="stylesheet" href="{% static 'web/css/slider-switch.css' %}">
-    {# <link rel="stylesheet" href="{% static 'web/fonts/font-awesome.min.css' %}"> #}
-    {# <link rel="stylesheet" href="{% static 'web/css/Navbar-Right-Links-Dark-icons.css' %}"> #}
 
     {% block head %} {% endblock %}
 </head>
@@ -167,56 +165,10 @@
     </div>
 
     <footer class="text-white bg-dark">
-        <div class="container py-4 py-lg-5">
-            <div class="row justify-content-center">
-                <div class="col-sm-4 col-md-3 text-center text-lg-start d-flex flex-column item">
-                    <h3 class="fs-6 text-white">Services</h3>
-                    <ul class="list-unstyled">
-                        <li><a class="link-light" href="#">Web design</a></li>
-                        <li><a class="link-light" href="#">Development</a></li>
-                        <li><a class="link-light" href="#">Hosting</a></li>
-                    </ul>
-                </div>
-                <div class="col-sm-4 col-md-3 text-center text-lg-start d-flex flex-column item">
-                    <h3 class="fs-6 text-white">About</h3>
-                    <ul class="list-unstyled">
-                        <li><a class="link-light" href="#">Company</a></li>
-                        <li><a class="link-light" href="#">Team</a></li>
-                        <li><a class="link-light" href="#">Legacy</a></li>
-                    </ul>
-                </div>
-                <div class="col-sm-4 col-md-3 text-center text-lg-start d-flex flex-column item">
-                    <h3 class="fs-6 text-white">Careers</h3>
-                    <ul class="list-unstyled">
-                        <li><a class="link-light" href="#">Job openings</a></li>
-                        <li><a class="link-light" href="#">Employee success</a></li>
-                        <li><a class="link-light" href="#">Benefits</a></li>
-                    </ul>
-                </div>
-                <div class="col-lg-3 text-center text-lg-start d-flex flex-column align-items-center order-first align-items-lg-start order-lg-last item social">
-                    <div class="fw-bold d-flex align-items-center mb-2">
-                        <span class="bs-icon-sm bs-icon-rounded bs-icon-primary d-flex justify-content-center align-items-center bs-icon me-2">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-bezier fs-5"></svg>
-                        </span>
-                        <span>Brand</span>
-                    </div>
-                    <p class="text-muted copyright">Sem eleifend donec molestie, integer quisque orci aliquam.</p>
-                </div>
-            </div>
+        <div class="container py-1 py-lg-2">
             <hr>
             <div class="d-flex justify-content-between align-items-center pt-3">
-                <p class="mb-0">Copyright © 2022 Brand</p>
-                <ul class="list-inline mb-0">
-                    <li class="list-inline-item">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-facebook"> </svg>
-                    </li>
-                    <li class="list-inline-item">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-twitter"></svg>
-                    </li>
-                    <li class="list-inline-item">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-instagram"> </svg>
-                    </li>
-                </ul>
+                <p class="mb-0">Copyright © 2023 Price Tracker</p>
             </div>
         </div>
     </footer>
