--- a/price_tracker/web/templates/web/index.html
+++ b/price_tracker/web/templates/web/index.html
@@ -24,7 +24,7 @@
                 <h5>Отслеживайте изменение цены на интересующий вас товар.<br /></h5>
             </div>
             <div class="col text-center">
-                <h5>Получайте уведомления когда Price Tracking обнаружит измененния цены или статус товара.<br /></h5>
+                <h5>Получайте уведомления при изменении цены или статуса товара.<br /></h5>
             </div>
             <div class="col">
                 <h5 class="text-center">Попробуйте сервис Price Tracker прямо сейчас.<br /><br /></h5>
@@ -40,7 +40,7 @@
             <form class="d-flex flex-column flex-md-row" target="_self" id="f_new_tracker">
                 <label class="form-label d-none lable" for="url"></label>
                 <input id="url-1" class="form-control url-input" type="url" name="url" placeholder="https://example.com/example-product.com" inputmode="url" autocomplete="on" required minlength="20" />
-                <button class="btn btn-primary align-self-end align-self-sm-end" type="submit">Confirm</button>
+                <button class="btn btn-primary align-self-end align-self-sm-end" type="submit">Подтвердить</button>
             </form>
             <div id="new-trecker-alert"></div>
         </div>
