notify admin if parser is not found

--- a/price_tracker/web/templates/web/index.html
+++ b/price_tracker/web/templates/web/index.html
@@ -42,7 +42,7 @@
                 <input id="url-1" class="form-control url-input" type="url" name="url" placeholder="https://example.com/example-product.com" inputmode="url" autocomplete="on" required minlength="20" />
                 <button class="btn btn-primary align-self-end align-self-sm-end" type="submit">Подтвердить</button>
             </form>
-            <div id="new-trecker-alert"></div>
+            <div id="new-trecker-alert" class="mt-1"></div>
         </div>
         <div class="row">
             <div class="col-md-9"></div>
