--- a/price_tracker/web/templates/web/profile.html
+++ b/price_tracker/web/templates/web/profile.html
@@ -55,7 +55,7 @@
                     </button>
                 </li>
                 <li class="nav-item flex-grow-0">
-                    <a class="nav-link log-out" href="{% url 'account_logout' %}">
+                    <a class="nav-link log-out" href="{% url 'account_logout' %}" id="act_logout">
                         <i class="icon ion-log-in fs-5"></i> Выйти
                     </a>
                 </li>
