add Tracker Share

--- a/price_tracker/web/static/web/css/styles.css
+++ b/price_tracker/web/static/web/css/styles.css
@@ -232,6 +232,10 @@ main {
   transform: rotate(-90deg);
 }
 
+.btn:disabled {
+  border: none;
+}
+
 /* @media (min-width:576px) {
   .tcs-disc {
     position: absolute;
