--- a/price_tracker/web/templates/web/index.html
+++ b/price_tracker/web/templates/web/index.html
@@ -16,7 +16,7 @@
     <section>   <!-- top -->
         <div class="row">
             <div class="col text-center mb-2">
-                <h3>Price Tracking</h3>
+                <h3>Price Tracker</h3>
             </div>
         </div>
         <div class="row">
