--- a/price_tracker/web/templates/web/profile.html
+++ b/price_tracker/web/templates/web/profile.html
@@ -51,12 +51,12 @@
                 </li>
                 <li class="nav-item flex-grow-0 mt-auto">
                     <button class="btn nav-link user-name" type="button" id="act_settings">
-                        <i class="icon ion-settings fs-5"></i>Настройки
+                        <i class="icon ion-settings fs-5"></i>&nbsp;&nbsp;&nbsp;&nbsp;Настройки
                     </button>
                 </li>
                 <li class="nav-item flex-grow-0">
                     <a class="nav-link log-out" href="{% url 'account_logout' %}" id="act_logout">
-                        <i class="icon ion-log-in fs-5"></i>Выйти
+                        <i class="icon ion-log-in fs-5"></i>&nbsp;&nbsp;&nbsp;&nbsp;Выйти
                     </a>
                 </li>
             </ul>
@@ -196,7 +196,7 @@
                             </div>
                             <fieldset style="position: relative;" disabled>
                                 <div class="form-check">
-                                    <input id="formCheck-1" class="form-check-input" type="checkbox" name="notify_types" value="27"/>
+                                    <input id="formCheck-1" class="form-check-input" type="checkbox" name="notify_types" value="2"/>
                                     <label class="form-check-label" for="formCheck-1">Письмом на E-mail</label>
                                 </div>
                                 <div class="form-check mb-1">
@@ -210,7 +210,7 @@
                                 </div>
                                 <p class="mt-2 mb-1">В следующих случаях смены цены:</p>
                                 <div class="form-check mb-1">
-                                    <input id="formCheck-3" class="form-check-input" type="radio" name="notify_case" value="30" />
+                                    <input id="formCheck-3" class="form-check-input" type="radio" name="notify_case" value="3" />
                                     <label class="form-check-label" for="formCheck-3">При любом изменении</label>
                                 </div>
                                 <div class="form-check">
@@ -218,7 +218,7 @@
                                     <label class="form-check-label" for="formCheck-5">Только при повышении</label>
                                 </div>
                                 <div class="form-check mb-1">
-                                    <input id="formCheck-4" class="form-check-input" type="radio" name="notify_case" value="29"  />
+                                    <input id="formCheck-4" class="form-check-input" type="radio" name="notify_case" value="2"  />
                                     <label class="form-check-label" for="formCheck-4">Только при понижении</label>
                                 </div>
                                 <button class="btn btn-primary btn-sm" type="submit" style="position: absolute;right: 0;bottom: 8px;">Сохранить</button>
