--- a/price_tracker/web/templates/web/base.html
+++ b/price_tracker/web/templates/web/base.html
@@ -7,6 +7,8 @@
 
 <head> 
     <meta charset="utf-8">
+    <meta name="google-site-verification" content="Iv7iBMeJXp1lOY3Fvsz9UPUK6EtdimreBBfWL77jk9c" />
+    
     <title>{% block title %}Price Tracker{% endblock %}</title>
 
     {% webpush_head %}
